[tool.poetry]
name = "repl_python3_beta_AnotherRoundAngle"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
PySimpleGUI = "^4.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
